# pyvisual

./: .gitignore  README.rst  environment.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/source/: conf.py  generate_sphinx_assets.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst  data.rst  exception.rst  function.rst  method.rst  module.rst  property.rst  static_method.rst
docs/source/api/: index.rst
docs/source/guide/: index.rst  installation.rst  overview.rst
examples/: GALLERY_HEADER.rst
examples/01_getting_started/: README.rst  p01_simple_scene.py  p02_longlat_lines.py  p03_loading_data.py  p03_spherical_grid.py  p04_adding_basic_shapes.py
examples/02_plotting_slices/: p01_1d_slices.py  p02_2d_slices.py  p03_iterating_over_slices.py  p04_using_spherical_mesh.py
examples/02_stack_mesh_mixin/: README.rst  p01_points.py  p02_splines.py  p02_surface.py  p03_fieldlines.py  p03_surface.py
examples/03_grid_mesh_mixin/: README.rst  p01_1d_slices.py  p02_2d_slices.py  p03_contour.py
examples/03_plotting_fieldlines/: p01_default_launch_points.py  p02_plotting_fieldline_polarity.py  p04_interdomain_tracing.py
examples/04_observer_mixin/: README.rst  p01_saving_views.py  p02_orbit.py  p03_los_and_fov_views.py
examples/04_observer_setting/: p01_saving_views.py
examples/05_advanced_plots/: p01_combining_multiple_elements.py  p03_defining_launchpoints.py  p05_interactive_tracer.py
examples/05_geometry_mixin/: README.rst  p01_shells_and_discs.py  p02_thompson_sphere.py  p03_grid.py
examples/06_spherical_grid_class/: README.rst  p01_construction.py  p01_spherical_grid_init.py  p02_arithmetic.py  p03_filters.py
examples/07_cartesian_grid_class/: README.rst  p01_cartesian_grid_init.py  p01_construction.py  p02_cart_arithmetic.py  p03_cart_filters.py
examples/08_extended_functionalities/: README.rst  p01_observer_position.py  p02_observer_fov.py
examples/99_advanced_plots/: README.rst  p01_combining_multiple_elements.py  p03_contour_based_fieldlines.py  p05_interactive_tracer.py  p07_faux_volume_render.py  p09_integrating_mhdweb_p1.py  p11_integrating_mhdweb_p2.py
pyvisual/: __init__.py
pyvisual/_assets/: pyvisual_theme.json
pyvisual/core/: __init__.py  _styling.py  _typing.py  constants.py  mesh3d.py  mixins.py  parsers.py  plot3d.py
pyvisual/utils/: __init__.py  data.py  geometry.py  helpers.py
